Apply suggestions from code review
Co-authored-by: Erin Shaben <eshaben@icloud.com>

--- a/tutorials/klusterai-api/finetuning-sent-analysis.ipynb
+++ b/tutorials/klusterai-api/finetuning-sent-analysis.ipynb
@@ -31,7 +31,7 @@
         "\n",
         "Fine-tuning is the process of refining a pre-trained model's parameters using additional, specialized data to improve performance on a specific task. Fine-tuning can offer valuable benefits: it can significantly improve performance for your specific use case and sometimes rival the results of more expensive, general-purpose models.\n",
         "\n",
-        "In this guide, you'll learn how to train a sentiment analysis model specifically tailored to your data using [kluster.ai](https://www.kluster.ai/). We'll walk through each step of the fine-tuning process—covering dataset setup, environment configuration, and batch inference. By following along, you'll discover how to leverage kluster.ai's powerful platform to create a custom model that boosts accuracy for financial text analysis and beyond."
+        "In this guide, you'll learn how to train a sentiment analysis model tailored to your data using <a href="https://kluster.ai/" target="_blank">kluster.ai</a>. We'll walk through each step of the fine-tuning process—covering dataset setup, environment configuration, and batch inference. By following along, you'll discover how to leverage kluster.ai's powerful platform to create a custom model that boosts accuracy for financial text analysis and beyond."
       ]
     },
     {
@@ -170,7 +170,7 @@
         "id": "fb8c5014-5b0c-43c2-a238-073dbde2d90a"
       },
       "source": [
-        "## Fetch a real dataset for batch inference\n",
+        "## Fetch a real dataset for Batch inference\n",
         "\n",
         "This dataset contains a variety of financial news headlines, each labeled as positive, negative, or neutral. In this context, positive indicates a beneficial impact on the company’s stock, negative suggests a detrimental impact, and neutral implies no significant change is expected.\n",
         "\n",
@@ -486,7 +486,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Next, we need to split the data into a training dataset, and testing dataset (to be used later on)."
+        "Next, we need to split the data into training and testing datasets (to be used later)."
       ],
       "metadata": {
         "id": "MzyehWgLQuAq"
@@ -626,11 +626,11 @@
         "id": "c9029a4f-8cfb-4193-b14b-7507006a969d"
       },
       "source": [
-        "Next, we'll submit the job to the kluster.ai fine-tuning API. Currently, two base models are supported for fine-tuning:\n",
+        "Next, we'll submit the job to the kluster.ai Fine-tuning API. Currently, two base models are supported for fine-tuning:\n",
         "- klusterai/Meta-Llama-3.1-8B-Instruct-Turbo\n",
         "- klusterai/Meta-Llama-3.3-70B-Instruct-Turbo\n",
         "\n",
-        "If you specify a different base model, the fine-tuning job will fail. You can also tweak the hyperparameters (such as number of epochs, batch size, and learning rate) to adjust training time and potential performance gains. Keep in mind that increasing the number of epochs will lead to longer training time, but may result in higher performance. If you're unsure which hyperparameters to set, you can also comment them out to accept the default values."
+        "If you specify a different base model, the Fine-tuning job will fail. You can also tweak the hyperparameters (such as number of epochs, batch size, and learning rate) to adjust training time and potential performance gains. Remember that increasing the number of epochs will lead to longer training time but may result in higher performance. If you're unsure which hyperparameters to set, you can also comment them out to accept the default values."
       ]
     },
     {
@@ -1119,9 +1119,9 @@
         "id": "44823bfb-fac2-4be9-aa3c-67cebbdd81cd"
       },
       "source": [
-        "Congratulations! You've now created a fine-tuned model. Above, you'll see the exact name of your fine tuned model.\n",
+        "Congratulations! You've now created a fine-tuned model. The exact name of your fine-tuned model is above.\n",
         "\n",
-        "In the next section, you'll be submitting batch requests to your fine-tuned model. However, you can also submit one-off requests as follows (remember to provide your kluster.ai API key and the name of your fine tuned model):\n",
+        "In the next section, you'll submit batch requests to your fine-tuned model. However, you can also submit one-off requests as follows (remember to provide your kluster.ai API key and the name of your fine-tuned model):\n",
         "\n",
         "```bash\n",
         "curl https://api.kluster.ai/v1/chat/completions \\\n",
@@ -1154,7 +1154,7 @@
         "id": "85c41457-2f31-4e98-aa55-3a42a478b8e7"
       },
       "source": [
-        "## Testing the fine-tuned model with batch inference"
+        "## Test the Fine-tuned model with Batch inference"
       ]
     },
     {
@@ -1164,7 +1164,7 @@
         "id": "598eeeac-84dc-40eb-a64d-19ee80114bb8"
       },
       "source": [
-        "With LLMs, it is essential to write a good prompt, including the system prompt. Below, you can see an example instruction for the LLM. Feel free to experiment with it and see how it changes the performance!"
+        "With LLMs, writing a good prompt, including the system prompt, is essential. Below, you can see an example instruction for the LLM. Feel free to experiment with it and see how it changes the performance!"
       ]
     },
     {
@@ -1190,7 +1190,7 @@
         "id": "c4f5a51c-fc39-4567-b85d-95a98d5f9c98"
       },
       "source": [
-        "Now that the prompt is defined, it’s time to execute the code and run the classification task for each model. In this step, we loop through the list of models, creating the requests and batch jobs, monitoring progress and retrieving the results.\n"
+        "Now that the prompt is defined, it's time to execute the code and run the classification task for each model. In this step, we loop through the list of models, creating the requests and Batch jobs, monitoring progress, and retrieving the results.\n"
       ]
     },
     {
@@ -1554,8 +1554,8 @@
         "id": "26ac1e99-edfe-4041-819e-1d366fbcfd68"
       },
       "source": [
-        "## Comparing the results\n",
-        "In this step, we compare the classification accuracy of the fine-tuned model against various baseline models. By calculating and visualizing their performance, we can determine whether fine-tuning delivers meaningful improvements over larger general-purpose models."
+        "## Compare the results\n",
+        "In this step, we compare the fine-tuned model's classification accuracy against various baseline models. We can determine whether fine-tuning delivers meaningful improvements over larger general-purpose models by calculating and visualizing their performance."
       ]
     },
     {
@@ -1645,9 +1645,9 @@
       "source": [
         "## Conclusion\n",
         "\n",
-        "As you can see in the above chart, the fine-tuned model performed appreciably better than the base model. Remember that we optimized this tutorial for speed, and not for performance. Accordingly, if you increase the size of the phrasebank dataset sample taken and increase the number of epochs as hyperparameters, you will likely see substantially increased performance of the fine-tuned model, that rivals the performance of the base 70b model.\n",
+        "As you can see in the above chart, the Fine-tuned model performed appreciably better than the base model. Remember that we optimized this tutorial for speed, and not for performance. Accordingly, if you increase the size of the phrasebank dataset sample taken and increase the number of epochs as hyperparameters, you will likely see substantially increased performance of the Fine-tuned model, that rivals the performance of the base 70b model.\n",
         "\n",
-        "After you run through the tutorial once successfully, we encourage you to experiment with the hyperparameters, training data, and the system prompt, and the various models offered by kluster. Good luck!"
+        "After you successfully run through the tutorial, we encourage you to experiment with the hyperparameters, training data, system prompts, and the various models kluster.ai offers. Good luck!"
       ]
     }
   ],
