--- a/tutorials/klusterai-api/finetuning-sent-analysis.ipynb
+++ b/tutorials/klusterai-api/finetuning-sent-analysis.ipynb
@@ -31,7 +31,7 @@
     "\n",
     "Fine-tuning is the process of refining a pre-trained model's parameters using additional, specialized data to improve performance on a specific task. Fine-tuning can offer valuable benefits: it can significantly improve performance for your specific use case and sometimes rival the results of more expensive, general-purpose models.\n",
     "\n",
-    "In this guide, you'll learn how to train a sentiment analysis model specifically tailored to your data using [kluster.ai](https://www.kluster.ai/). We'll walk through each step of the fine-tuning process—covering dataset setup, environment configuration, and batch inference. By following along, you'll see how to harness kluster.ai's advanced platform to build a custom model that enhances accuracy—demonstrated here through financial text sentiment analysis, but applicable across many other use cases."
+    "In this guide, you'll learn how to train a sentiment analysis model specifically tailored to your data using [kluster.ai](https://www.kluster.ai/). We'll walk through each step of the Fine-tuning process—covering dataset setup, environment configuration, and batch inference. By following along, you'll see how to harness kluster.ai's advanced platform to build a custom model that enhances accuracy—demonstrated here through financial text sentiment analysis, but applicable across many other use cases."
    ]
   },
   {
@@ -201,7 +201,7 @@
     "id": "0a03d805-0d59-42ce-ac2a-4f9beacd639b"
    },
    "source": [
-    "### Split data into train/test for fine-tuning"
+    "### Split data into train/test for Fine-tuning"
    ]
   },
   {
@@ -328,11 +328,11 @@
     "id": "c9029a4f-8cfb-4193-b14b-7507006a969d"
    },
    "source": [
-    "Next, we'll submit the job to the kluster.ai fine-tuning API. Currently, two base models are supported for fine-tuning:\n",
+    "Next, we'll submit the job to the kluster.ai Fine-tuning API. Currently, two base models are supported for Fine-tuning:\n",
     "- klusterai/Meta-Llama-3.1-8B-Instruct-Turbo\n",
     "- klusterai/Meta-Llama-3.3-70B-Instruct-Turbo\n",
     "\n",
-    "If you specify a different base model, the fine-tuning job will fail. You can also tweak the hyperparameters (such as number of epochs, batch size, and learning rate) to adjust training time and potential performance gains. Keep in mind that increasing the number of epochs will lead to longer training time, but may result in higher performance. If you're unsure which hyperparameters to set, you can also comment them out to accept the default values."
+    "If you specify a different base model, the Fine-tuning job will fail. You can also tweak the hyperparameters (such as number of epochs, batch size, and learning rate) to adjust training time and potential performance gains. Keep in mind that increasing the number of epochs will lead to longer training time, but may result in higher performance. If you're unsure which hyperparameters to set, you can also comment them out to accept the default values."
    ]
   },
   {
@@ -662,7 +662,7 @@
    },
    "source": [
     "## Comparing the results\n",
-    "In this step, we compare the classification accuracy of the fine-tuned model against various baseline models. By calculating and visualizing their performance, we can determine whether fine-tuning delivers meaningful improvements over larger general-purpose models."
+    "In this step, we compare the classification accuracy of the fine-tuned model against various baseline models. By calculating and visualizing their performance, we can determine whether Fine-tuning delivers meaningful improvements over larger general-purpose models."
    ]
   },
   {
