--- a/tutorials/klusterai-api/finetuning-sent-analysis.ipynb
+++ b/tutorials/klusterai-api/finetuning-sent-analysis.ipynb
@@ -31,7 +31,7 @@
     "\n",
     "Fine-tuning is the process of refining a pre-trained model's parameters using additional, specialized data to improve performance on a specific task. Fine-tuning can offer valuable benefits: it can significantly improve performance for your specific use case and sometimes rival the results of more expensive, general-purpose models.\n",
     "\n",
-    "In this guide, you'll learn how to train a sentiment analysis model specifically tailored to your data using [kluster.ai](https://www.kluster.ai/). We'll walk through each step of the Fine-tuning process—covering dataset setup, environment configuration, and batch inference. By following along, you'll see how to harness kluster.ai's advanced platform to build a custom model that enhances accuracy—demonstrated here through financial text sentiment analysis, but applicable across many other use cases."
+   "In this guide, you'll learn how to train a sentiment analysis model tailored to your data using <a href=\"https://kluster.ai/\" target=\"_blank\">kluster.ai</a>. We'll walk through each step of the fine-tuning process—covering dataset setup, environment configuration, and batch inference. By following along, you'll discover how to leverage kluster.ai's powerful platform to create a custom model that boosts accuracy for financial text analysis and beyond."
    ]
   },
   {
@@ -162,7 +162,7 @@
     "id": "fb8c5014-5b0c-43c2-a238-073dbde2d90a"
    },
    "source": [
-    "## Fetch a real dataset for batch inference\n",
+    "## Fetch a real dataset for Batch inference\n",
     "\n",
     "This dataset contains a variety of financial news headlines, each labeled as positive, negative, or neutral. In this context, positive indicates a beneficial impact on the company’s stock, negative suggests a detrimental impact, and neutral implies no significant change is expected.\n",
     "\n",
@@ -211,7 +211,7 @@
     "id": "MzyehWgLQuAq"
    },
    "source": [
-    "Next, we need to split the data into a training dataset, and testing dataset (to be used later on)."
+     "Next, we need to split the data into training and testing datasets (to be used later)."
    ]
   },
   {
@@ -261,7 +261,7 @@
     "id": "QMXyZoDINlBC"
    },
    "source": [
-    "Fine-tuning is the process of adjusting a pre-trained model with new, domain-specific data to enhance performance for a specific task, which typically reduces training time and costs compared to training from scratch. Additionally, it can allow smaller, fine-tuned models to match or even rival the performance of larger, general models that haven’t been fine-tuned."
+    "Fine-tuning is the process of adjusting a pre-trained model with new, domain-specific data to enhance performance for a specific task, which typically reduces training time and costs compared to training from scratch. Additionally, it can allow smaller, Fine-tuned models to match or even rival the performance of larger, general models that haven’t been Fine-tuned."
    ]
   },
   {
@@ -332,7 +332,7 @@
     "- klusterai/Meta-Llama-3.1-8B-Instruct-Turbo\n",
     "- klusterai/Meta-Llama-3.3-70B-Instruct-Turbo\n",
     "\n",
-    "If you specify a different base model, the Fine-tuning job will fail. You can also tweak the hyperparameters (such as number of epochs, batch size, and learning rate) to adjust training time and potential performance gains. Keep in mind that increasing the number of epochs will lead to longer training time, but may result in higher performance. If you're unsure which hyperparameters to set, you can also comment them out to accept the default values."
+    "If you specify a different base model, the Fine-tuning job will fail. You can also tweak the hyperparameters (such as number of epochs, batch size, and learning rate) to adjust training time and potential performance gains. Remember that increasing the number of epochs will lead to longer training time but may result in higher performance. If you're unsure which hyperparameters to set, you can also comment them out to accept the default values."
    ]
   },
   {
@@ -515,9 +515,9 @@
     "id": "44823bfb-fac2-4be9-aa3c-67cebbdd81cd"
    },
    "source": [
-    "Congratulations! You've now created a fine-tuned model. Above, you'll see the exact name of your fine tuned model.\n",
+    "Congratulations! You've now created a Fine-tuned model. The exact name of your Fine-tuned model is above.\n",
     "\n",
-    "In the next section, you'll be submitting batch requests to your fine-tuned model. However, you can also submit one-off requests as follows (remember to provide your kluster.ai API key and the name of your fine tuned model):\n",
+    "In the next section, you'll submit batch requests to your Fine-tuned model. However, you can also submit one-off requests as follows (remember to provide your kluster.ai API key and the name of your Fine-tuned model):\n",
     "\n",
     "```bash\n",
     "curl https://api.kluster.ai/v1/chat/completions \\\n",
@@ -550,7 +550,7 @@
     "id": "85c41457-2f31-4e98-aa55-3a42a478b8e7"
    },
    "source": [
-    "## Testing the fine-tuned model with batch inference"
+    "## Test the Fine-tuned model with Batch inference"
    ]
   },
   {
@@ -562,9 +562,9 @@
    "source": [
     "In real-world scenarios, you often need to assess your model’s performance on a broad set of inputs rather than just a single prompt. This is where batch inference comes in: by sending multiple prompts in one job, you can quickly gather outputs across diverse examples and see how well your model generalizes.\n",
     "\n",
-    "In this section, we’ll run batch requests to the fine-tuned model and baseline models, then compare their outputs. We’ll use a single system prompt for all inputs, showing how prompt engineering influences results. After the jobs finish, we’ll retrieve the responses, measure their accuracy against the ground truth, and highlight where the fine-tuned model excels—or needs further tuning—relative to more generalized models.\n",
+    "In this section, we’ll run batch requests to the Fine-tuned model and baseline models, then compare their outputs. We’ll use a single system prompt for all inputs, showing how prompt engineering influences results. After the jobs finish, we’ll retrieve the responses, measure their accuracy against the ground truth, and highlight where the Fine-tuned model excels—or needs further tuning—relative to more generalized models.\n",
     "\n",
-    "With LLMs, it is essential to write a good prompt, including the system prompt. Below, you can see an example instruction for the LLM. Feel free to experiment with it and see how it changes the performance!"
+    "With LLMs, writing a good prompt, including the system prompt, is essential. Below, you can see an example instruction for the LLM. Feel free to experiment with it and see how it changes the performance!"
    ]
   },
   {
@@ -590,7 +590,7 @@
     "id": "c4f5a51c-fc39-4567-b85d-95a98d5f9c98"
    },
    "source": [
-    "Now that the prompt is defined, it’s time to execute the code and run the classification task for each model. In this step, we loop through the list of models, creating the requests and batch jobs, monitoring progress and retrieving the results.\n"
+    "Now that the prompt is defined, it's time to execute the code and run the classification task for each model. In this step, we loop through the list of models, creating the requests and Batch jobs, monitoring progress, and retrieving the results.\n"
    ]
   },
   {
@@ -661,8 +661,8 @@
     "id": "26ac1e99-edfe-4041-819e-1d366fbcfd68"
    },
    "source": [
-    "## Comparing the results\n",
-    "In this step, we compare the classification accuracy of the fine-tuned model against various baseline models. By calculating and visualizing their performance, we can determine whether Fine-tuning delivers meaningful improvements over larger general-purpose models."
+    "## Compare the results\n",
+    "In this step, we compare the Fine-tuned model's classification accuracy against various baseline models. We can determine whether fine-tuning delivers meaningful improvements over larger general-purpose models by calculating and visualizing their performance."
    ]
   },
   {
@@ -744,7 +744,7 @@
    "source": [
     "## Conclusion\n",
     "\n",
-    "As shown in the chart above, the fine-tuned model outperforms the base model when given a substantial amount of training data and default hyperparameters. Training on 4,000 financial phrases with these defaults usually takes several hours. Once you complete this tutorial successfully, feel free to explore different hyperparameters, datasets, prompts, and the various models available from kluster.ai. Good luck!"
+    "As shown in the chart above, the Fine-tuned model outperforms the base model when given a substantial amount of training data and default hyperparameters. Training on 4,000 financial phrases with these defaults usually takes several hours. Once you complete this tutorial successfully, feel free to explore different hyperparameters, datasets, prompts, and the various models available from kluster.ai. Good luck!"
    ]
   }
  ],
