--- a/tutorials/klusterai-api/finetuning-sent-analysis.ipynb
+++ b/tutorials/klusterai-api/finetuning-sent-analysis.ipynb
@@ -29,7 +29,7 @@
    "source": [
     "## Introduction\n",
     "\n",
-    "Fine-tuning is the process of refining a pre-trained model's weights using additional, specialized data to improve performance on a specific task. Fine-tuning can offer valuable benefits: it can significantly improve performance for your specific use case and sometimes rival the results of more expensive, general-purpose models.\n",
+    "Fine-tuning is the process of customizing an existing model using new data to improve performance on a specific task. Fine-tuning can offer valuable benefits: it can significantly improve performance for your specific use case and sometimes rival the results of more expensive, general-purpose models.\n",
     "\n",
    "In this guide, you'll learn how to train a sentiment analysis model tailored to your data using <a href=\"https://kluster.ai/\" target=\"_blank\">kluster.ai</a>. We'll walk through each step of the fine-tuning process—covering dataset setup, environment configuration, and batch inference. By following along, you'll discover how to leverage kluster.ai's powerful platform to create a custom model that boosts accuracy for financial text analysis and beyond."
    ]
@@ -562,7 +562,7 @@
    "source": [
     "In real-world scenarios, you often need to assess your model’s performance on a broad set of inputs rather than just a single prompt. This is where batch inference comes in: by sending multiple prompts in one job, you can quickly gather outputs across diverse examples and see how well your model generalizes.\n",
     "\n",
-    "In this section, we’ll run batch requests to the fine-tuned model and baseline models, then compare their outputs. We’ll use a single system prompt for all inputs, showing how prompt engineering influences results. After the jobs finish, we’ll retrieve the responses, measure their accuracy against the ground truth, and highlight where the fine-tuned model excels—or needs further tuning—relative to more generalized models.\n",
+    "In this section, we’ll run batch requests to the fine-tuned model and baseline models, then compare their outputs. After the jobs finish, we’ll retrieve the responses, measure their accuracy against the ground truth, and highlight where the fine-tuned model excels—or needs further tuning—relative to more generalized models.\n",
     "\n",
     "With LLMs, writing a good prompt, including the system prompt, is essential. Below, you can see an example instruction for the LLM. Feel free to experiment with it and see how it changes the performance!"
    ]
