--- a/tutorials/klusterai-api/finetuning-sent-analysis.ipynb
+++ b/tutorials/klusterai-api/finetuning-sent-analysis.ipynb
@@ -744,7 +744,7 @@
    "source": [
     "## Conclusion\n",
     "\n",
-    "As shown in the chart above, the fine-tuned model outperforms the base model when given a substantial amount of training data and default hyperparameters. Training on 4,000 financial phrases with these defaults usually takes several hours. Once you complete this tutorial successfully, feel free to explore different hyperparameters, datasets, prompts, and the various models available from kluster.ai. Good luck!"
+    "As shown in the chart above, the fine-tuned model outperforms the base model with the provided training data and default hyperparameters. Training on 400 financial phrases with these defaults can take multiple hours. Once you complete this tutorial successfully, feel free to explore different hyperparameters, datasets, prompts, and the various models available from kluster.ai. Good luck!"
    ]
   }
  ],
