Updates to Fine Tuning Tutorial (#62)
* capitalization

* rev

* rev

* revisions

* revisions

* capitalization

--- a/tutorials/klusterai-api/finetuning-sent-analysis.ipynb
+++ b/tutorials/klusterai-api/finetuning-sent-analysis.ipynb
@@ -29,7 +29,7 @@
    "source": [
     "## Introduction\n",
     "\n",
-    "Fine-tuning is the process of refining a pre-trained model's parameters using additional, specialized data to improve performance on a specific task. Fine-tuning can offer valuable benefits: it can significantly improve performance for your specific use case and sometimes rival the results of more expensive, general-purpose models.\n",
+    "Fine-tuning is the process of customizing an existing model using new data to improve performance on a specific task. Fine-tuning can offer valuable benefits: it can significantly improve performance for your specific use case and sometimes rival the results of more expensive, general-purpose models.\n",
     "\n",
    "In this guide, you'll learn how to train a sentiment analysis model tailored to your data using <a href=\"https://kluster.ai/\" target=\"_blank\">kluster.ai</a>. We'll walk through each step of the fine-tuning process—covering dataset setup, environment configuration, and batch inference. By following along, you'll discover how to leverage kluster.ai's powerful platform to create a custom model that boosts accuracy for financial text analysis and beyond."
    ]
@@ -261,7 +261,7 @@
     "id": "QMXyZoDINlBC"
    },
    "source": [
-    "Fine-tuning is the process of adjusting a pre-trained model with new, domain-specific data to enhance performance for a specific task, which typically reduces training time and costs compared to training from scratch. Additionally, it can allow smaller, Fine-tuned models to match or even rival the performance of larger, general models that haven’t been Fine-tuned."
+    "Fine-tuning is the process of adjusting a pre-trained model with new, domain-specific data to enhance performance for a specific task, which typically reduces training time and costs compared to training from scratch. Additionally, it can allow smaller, fine-tuned models to match or even rival the performance of larger, general models that haven’t been fine-tuned."
    ]
   },
   {
@@ -328,11 +328,11 @@
     "id": "c9029a4f-8cfb-4193-b14b-7507006a969d"
    },
    "source": [
-    "Next, we'll submit the job to the kluster.ai Fine-tuning API. Currently, two base models are supported for Fine-tuning:\n",
+    "Next, we'll submit the job to the kluster.ai fine-tuning API. Currently, two base models are supported for fine-tuning:\n",
     "- klusterai/Meta-Llama-3.1-8B-Instruct-Turbo\n",
     "- klusterai/Meta-Llama-3.3-70B-Instruct-Turbo\n",
     "\n",
-    "If you specify a different base model, the Fine-tuning job will fail. You can also tweak the hyperparameters (such as number of epochs, batch size, and learning rate) to adjust training time and potential performance gains. Remember that increasing the number of epochs will lead to longer training time but may result in higher performance. If you're unsure which hyperparameters to set, you can also comment them out to accept the default values."
+    "If you specify a different base model, the fine-tuning job will fail. You can also tweak the hyperparameters (such as number of epochs, batch size, and learning rate) to adjust training time and potential performance gains. Remember that increasing the number of epochs will lead to longer training time but may result in higher performance. If you're unsure which hyperparameters to set, you can also comment them out to accept the default values."
    ]
   },
   {
@@ -515,9 +515,9 @@
     "id": "44823bfb-fac2-4be9-aa3c-67cebbdd81cd"
    },
    "source": [
-    "Congratulations! You've now created a Fine-tuned model. The exact name of your Fine-tuned model is above.\n",
+    "Congratulations! You've now created a fine-tuned model. The exact name of your fine-tuned model is above.\n",
     "\n",
-    "In the next section, you'll submit batch requests to your Fine-tuned model. However, you can also submit one-off requests as follows (remember to provide your kluster.ai API key and the name of your Fine-tuned model):\n",
+    "In the next section, you'll submit batch requests to your fine-tuned model. However, you can also submit one-off requests as follows (remember to provide your kluster.ai API key and the name of your fine-tuned model):\n",
     "\n",
     "```bash\n",
     "curl https://api.kluster.ai/v1/chat/completions \\\n",
@@ -562,7 +562,7 @@
    "source": [
     "In real-world scenarios, you often need to assess your model’s performance on a broad set of inputs rather than just a single prompt. This is where batch inference comes in: by sending multiple prompts in one job, you can quickly gather outputs across diverse examples and see how well your model generalizes.\n",
     "\n",
-    "In this section, we’ll run batch requests to the Fine-tuned model and baseline models, then compare their outputs. We’ll use a single system prompt for all inputs, showing how prompt engineering influences results. After the jobs finish, we’ll retrieve the responses, measure their accuracy against the ground truth, and highlight where the Fine-tuned model excels—or needs further tuning—relative to more generalized models.\n",
+    "In this section, we’ll run batch requests to the fine-tuned model and baseline models, then compare their outputs. After the jobs finish, we’ll retrieve the responses, measure their accuracy against the ground truth, and highlight where the fine-tuned model excels—or needs further tuning—relative to more generalized models.\n",
     "\n",
     "With LLMs, writing a good prompt, including the system prompt, is essential. Below, you can see an example instruction for the LLM. Feel free to experiment with it and see how it changes the performance!"
    ]
@@ -634,7 +634,7 @@
    "id": "1c8c0a90-18be-4192-a9a7-c03f610e838d",
    "metadata": {},
    "source": [
-    "In the chart below, we compare three text samples and evaluate each model’s outputs against the ground truth. While results may vary in different Fine-tuning runs, we observe consistent trends: notably, the Fine-tuned model's performance closely matches that of the larger (and more expensive) base model. This suggests that Fine-tuning can deliver higher accuracy on your specific tasks at a lower cost than relying on higher-parameter models. "
+    "In the chart below, we compare three text samples and evaluate each model’s outputs against the ground truth. While results may vary in different fine-tuning runs, we observe consistent trends: notably, the fine-tuned model's performance closely matches that of the larger (and more expensive) base model. This suggests that fine-tuning can deliver higher accuracy on your specific tasks at a lower cost than relying on higher-parameter models. "
    ]
   },
   {
@@ -662,7 +662,7 @@
    },
    "source": [
     "## Compare the results\n",
-    "In this step, we compare the Fine-tuned model's classification accuracy against various baseline models. We can determine whether fine-tuning delivers meaningful improvements over larger general-purpose models by calculating and visualizing their performance."
+    "In this step, we compare the fine-tuned model's classification accuracy against various baseline models. We can determine whether fine-tuning delivers meaningful improvements over larger general-purpose models by calculating and visualizing their performance."
    ]
   },
   {
@@ -744,7 +744,7 @@
    "source": [
     "## Conclusion\n",
     "\n",
-    "As shown in the chart above, the Fine-tuned model outperforms the base model when given a substantial amount of training data and default hyperparameters. Training on 4,000 financial phrases with these defaults usually takes several hours. Once you complete this tutorial successfully, feel free to explore different hyperparameters, datasets, prompts, and the various models available from kluster.ai. Good luck!"
+    "As shown in the chart above, the fine-tuned model outperforms the base model with the provided training data and default hyperparameters. Training on 400 financial phrases with these defaults can take multiple hours. Once you complete this tutorial successfully, feel free to explore different hyperparameters, datasets, prompts, and the various models available from kluster.ai. Good luck!"
    ]
   }
  ],
